# pyctrl-block-diagram

./: LICENSE.txt  README.md  pyproject.toml  requirements.txt
src/pyctrl_block_diagram/: __init__.py  block_diagram.py
tests/: test_browser.py
